# xray

./: .gitignore  BACKLOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  RELEASING.md  SECURITY.md  dist-workspace.toml  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: deb.yml  publish-crate.yml  release.yml
fixtures/clean/: employees.csv
fixtures/messy/: big_ids.csv  flags.csv  quoted_commas.csv  risk_log.csv  vendor_spend.csv
skills/xray/: SKILL.md  reference.md
src/: findings.rs  json.rs  main.rs  render.rs  resolve.rs  scan.rs  theme.rs
tests/: cli.rs
