[package]
name = "x-ray"
homepage = "https://excelano.com/xray/"
version = "0.1.0"
edition = "2021"
description = "a read-only profiler for tabular data — what a CSV/DSV is, before you edit or query it"
license = "MIT"
authors = ["David M. Anderson"]
repository = "https://github.com/excelano/xray"
readme = "README.md"
keywords = ["csv", "profile", "stats", "tabular", "inspect"]
categories = ["command-line-utilities", "text-processing"]

# Crate name is x-ray — the real word, and free because crates.io treats
# `xray` (dormant 2018 crate) and `x-ray` as distinct names. The command
# everyone types stays `xray`.
[[bin]]
name = "xray"
path = "src/main.rs"

[dependencies]
csv = "1"
clap = { version = "4", features = ["derive"] }
anstyle = "1.0.14"
anstream = "1.0.0"
serde_json = "1.0.150"

[dev-dependencies]
serde_json = "1"

[package.metadata.dist]
# The crate is `x-ray` (bare `xray` was taken), but the command, the Homebrew
# formula, and every other package coordinate are `xray` — one name to type.
formula = "xray"

[package.metadata.deb]
maintainer = "David M. Anderson <david.anderson@excelano.com>"
extended-description = """
xray is a read-only profiler for tabular data: one streaming pass over a CSV or
DSV that reports what the file is (shape, delimiter, encoding), what each column
holds (type, fill, cardinality — stringly-typed, so leading zeros and long IDs
stay text), and what will bite a later step (ragged rows, total rows, currency
text, mixed types, buried headers). It observes and never writes — cleaning is
xled's job, querying is xql's."""
section = "utils"
priority = "optional"
depends = "libc6, libgcc-s1"
assets = [
    ["target/release/xray", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/x-ray/README.md", "644"],
    ["LICENSE", "usr/share/doc/x-ray/copyright", "644"],
]

[profile.dist]
inherits = "release"
lto = "thin"
